naming is fixed and swagger added
