# docs/swagger/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /
 definitions:
-  domain.Error:
+  dto.Error:
     properties:
       error: {}
       message:
@@ -8,75 +8,75 @@ definitions:
       status_code:
         type: integer
     type: object
-  domain.Location:
+  dto.Location:
     properties:
       lat:
         type: number
       long:
         type: number
     type: object
-  domain.Match:
+  dto.Match:
     properties:
       distance:
-        $ref: '#/definitions/domain.Measure'
+        $ref: '#/definitions/dto.Measure'
       location:
-        $ref: '#/definitions/domain.Location'
+        $ref: '#/definitions/dto.Location'
       name:
         type: string
       partner_id:
         type: string
       radius:
-        $ref: '#/definitions/domain.Measure'
+        $ref: '#/definitions/dto.Measure'
       rank:
         type: integer
       rating:
-        $ref: '#/definitions/domain.Rating'
+        $ref: '#/definitions/dto.Rating'
       skills:
         items:
           type: string
         type: array
     type: object
-  domain.MatchFilter:
+  dto.MatchFilter:
     properties:
       location:
-        $ref: '#/definitions/domain.Location'
+        $ref: '#/definitions/dto.Location'
       material_type:
         type: string
     type: object
-  domain.MatchListResponse:
+  dto.MatchListResponse:
     properties:
       filter:
-        $ref: '#/definitions/domain.MatchFilter'
+        $ref: '#/definitions/dto.MatchFilter'
       matches:
         items:
-          $ref: '#/definitions/domain.Match'
+          $ref: '#/definitions/dto.Match'
         type: array
     type: object
-  domain.Measure:
+  dto.Measure:
     properties:
       metric:
         type: string
       value:
         type: number
     type: object
-  domain.Partner:
+  dto.Partner:
     properties:
       id:
         type: string
       location:
-        $ref: '#/definitions/domain.Location'
+        $ref: '#/definitions/dto.Location'
       name:
         type: string
       radius:
-        $ref: '#/definitions/domain.Measure'
+        $ref: '#/definitions/dto.Measure'
       rating:
-        $ref: '#/definitions/domain.Rating'
+        $ref: '#/definitions/dto.Rating'
       skills:
         items:
           type: string
         type: array
     type: object
-  domain.Rating:
+  dto.Rating:
     properties:
       value_avg:
         type: integer
@@ -119,15 +119,15 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: '#/definitions/domain.MatchListResponse'
+            $ref: '#/definitions/dto.MatchListResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/domain.Error'
+            $ref: '#/definitions/dto.Error'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/domain.Error'
+            $ref: '#/definitions/dto.Error'
       summary: Returns the matched relevant partners for the customer
       tags:
       - match
@@ -149,15 +149,15 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: '#/definitions/domain.Partner'
+            $ref: '#/definitions/dto.Partner'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/domain.Error'
+            $ref: '#/definitions/dto.Error'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/domain.Error'
+            $ref: '#/definitions/dto.Error'
       summary: Returns the partner by partner_id parameter
       tags:
       - partner
